--- a/index.html
+++ b/index.html
@@ -1,58 +1,46 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="pt">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <link href="./index.css" rel="stylesheet">
     <title>Home</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body class="p-0 m-0 border-0 bd-example m-0 border-0">
 
     <!-- Example Code -->
-    
-    <nav class="navbar col-12 m-auto position-fixed navbar-expand-lg navbar-dark bg-primary">
-      <div class="container-fluid col-11 m-auto">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light" type="submit">Search</button>
-          </form>
-        </div>
+    <nav class="navbar col-12 position-fixed m-auto navbar-expand-lg navbar-dark" >
+      <div class="container-fluid col-9 m-auto">
+        <a class="navbar-brand" href="{% url 'home' %}">FORUM(LOGO)</a>
+          <div class="d-flex">
+            <button class="btn btn-outline-light me-3" type="submit"><a class="dropdown-item" style="font-weight: 500;" href={% url 'entrar' %}>Entrar</a></button>
+            <button class="btn btn-light" type="submit"><a class="dropdown-item" style="color: #166BCE; font-weight: 500;" href={% url 'cadastro' %}>Criar Conta</a></button>
+          </div>
       </div>
     </nav>
-    
-    <!-- End Example Code -->
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+    <div class="main">
+      <div class="cointainer-fluid" style="height: 600px;">
+        <div class="row">
+            <div class="col">CORPO</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="cointainer-fluid" style="height: 100px;">
+        <div class="row">
+            <div class="col">RODAPE</div>
+        </div>
+      </div>
+    </div>
+
+
+
 
   </body>
 </html>
