--- a/index.html
+++ b/index.html
@@ -1,46 +1,78 @@
-
 <!DOCTYPE html>
-<html lang="pt">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link href="./index.css" rel="stylesheet">
-    <title>Home</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-  <body class="p-0 m-0 border-0 bd-example m-0 border-0">
+<html lang="en">
 
-    <!-- Example Code -->
-    <nav class="navbar col-12 position-fixed m-auto navbar-expand-lg navbar-dark" >
-      <div class="container-fluid col-9 m-auto">
-        <a class="navbar-brand" href="{% url 'home' %}">FORUM(LOGO)</a>
-          <div class="d-flex">
-            <button class="btn btn-outline-light me-3" type="submit"><a class="dropdown-item" style="font-weight: 500;" href={% url 'entrar' %}>Entrar</a></button>
-            <button class="btn btn-light" type="submit"><a class="dropdown-item" style="color: #166BCE; font-weight: 500;" href={% url 'cadastro' %}>Criar Conta</a></button>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="index.css">
+  
+  <title>Bootstrap</title>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-custom ">
+      <div class="container-fluid col-10">
+        <a class="navbar-brand text-light" href="#">FORUM(LOGO)</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
+          <ul class="navbar-nav ms-auto">
+
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">ENTRAR</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="">CADASTRE-SE</a>
+            </li>
+
+          </ul>
+          <div class="button-group ms-3">
+            <button class="btn btn-light me-3 rounded-pill" type="submit">
+              <a class="dropdown-item" style="font-weight: 500;" href="#">FAÇA UMA PERGUNTA</a>
+            </button>
           </div>
+
+
+        </div>
       </div>
     </nav>
+  </header>
+
+  <main>
 
     <div class="main">
-      <div class="cointainer-fluid" style="height: 600px;">
-        <div class="row">
-            <div class="col">CORPO</div>
+      <div class="container-fluid" style="height: 750px;">
+        <div class="row align-items-center justify-content-around" style="height: 750px">
+          <div class="col-3 bg-warning text-center"></div>
+          <div class="col-3 bg-warning text-center"></div>
         </div>
       </div>
     </div>
 
-    <div class="footer">
-      <div class="cointainer-fluid" style="height: 100px;">
+  </main>
+
+  <footer>
+
+    <div class="footer text-center">
+      <div class="container-fluid bg-custom" style="height: 150px;">
         <div class="row">
-            <div class="col">RODAPE</div>
+          <div class="col">Rodape</div>
         </div>
       </div>
     </div>
 
+  </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
 
-
-  </body>
 </html>
